--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -81,8 +81,12 @@
 {% include "components/suggestion-input.html" %}
 
 {% include "components/opinion-modal.html" with suggestions=suggestions %}
+
 {% include "components/info-modal.html" %}
 
+{% include "components/opinion-onboarding.html" %}
+
+{% include "components/text-selection-onboarding.html" %}
 {% endblock content %}
 
 {% block page_js %}
@@ -102,5 +106,7 @@
   <script src="{% static 'js/components/opinionModal/controller.js' %}"></script>
   <script src="{% static 'js/components/textHighlight/view.js' %}"></script>
   <script src="{% static 'js/components/highlightTooltip/view.js' %}"></script>
+  <script src="{% static 'js/components/opinionOnboarding/view.js' %}"></script>
+  <script src="{% static 'js/components/textSelectionOnboarding/view.js' %}"></script>
   <script src="{% static 'js/pages/document.js' %}"></script>
 {% endblock page_js %}
