--- a/src/static/scss/base/_unclassed.scss
+++ b/src/static/scss/base/_unclassed.scss
@@ -35,8 +35,10 @@ body {
 
   &.-home {
     & .nav-bar {
-      @include bp-mediumup {
-        box-shadow: none;
+      opacity: 0;
+
+      &.-shadow {
+        opacity: 1;
       }
     }
   }
@@ -76,7 +78,6 @@ body {
 }
 
 main {
-  margin-top: 2.75rem;
   margin-right: auto;
   margin-left: auto;
   padding: $space-centi;
