--- a/src/static/scss/components/_alert-message.scss
+++ b/src/static/scss/components/_alert-message.scss
@@ -8,7 +8,7 @@
   overflow: hidden;
   align-items: center;
 
-  transition: all .15s $swift-out;
+  transition: all .5s .5s $swift-out;
   transform: translateY(150%);
 
   opacity: 0;
@@ -17,31 +17,25 @@
   background-color: $color-deep-gray;
 
   &.-show {
+    transition: all .5s 0s $swift-out;
     transform: translateY(0);
 
     opacity: 1;
   }
 
-  &.-hide {
-    transition: all .25s ease;
+  &.-color {
+
+
+    .background {
+      transform: scaleY(1);
+    }
 
     &.-success {
-      background-color: $color-brand;
+      // background-color: $color-brand;
     }
 
     &.-fail {
-      background-color: $color-red;
-    }
-
-    &.-success,
-    &.-fail {
-      & > .actions {
-        display: none;
-      }
-
-      & > .progress {
-        opacity: 0;
-      }
+      // background-color: $color-red;
     }
   }
 
@@ -49,10 +43,14 @@
     & > .progress {
       background-color: lighten($color-brand, 10%);
     }
+
+    & > .background {
+      background-color: $color-brand;
+    }
   }
 
   &.-fail {
-    & > .progress {
+    & > .progress, .background {
       background-color: $color-red;
     }
   }
@@ -116,10 +114,25 @@
 
     width: 100%;
     height: 4px;
+    z-index: -2;
 
     transform: scaleX(0);
     transform-origin: 0;
 
     background-color: lighten($color-deep-gray, 35%);
+
+
+  }
+
+  & > .background {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: scaleY(0);
+    transform-origin: 0 100%;
+    z-index: -1;
+    transition: transform 0.4s $swift-out;
   }
 }
