Create random emojis

--- a/src/templates/components/alert-message.html
+++ b/src/templates/components/alert-message.html
@@ -1,6 +1,6 @@
 <div class="alert-message js-alertMessage">
   <div class="message">
-    <span class="icon">😃</span>
+    <span class="icon js-emoji"></span>
     <span class="text js-message"></span>
   </div>
   <div class="actions _hide js-actions">
