--- a/src/static/scss/components/_text-highlight.scss
+++ b/src/static/scss/components/_text-highlight.scss
@@ -4,9 +4,11 @@
   padding: .2em 0;
 
   color: $color-deep-gray;
+  background-color: rgba($color-highlight, .5);
 
   &.-active {
-    background-color: rgba(255, 221, 102, 1);
     cursor: default;
+
+    background-color: $color-highlight;
   }
 }
