--- a/src/static/scss/components/_alert-message.scss
+++ b/src/static/scss/components/_alert-message.scss
@@ -1,13 +1,8 @@
 .alert-message {
   position: fixed;
   z-index: 3;
-  left: 1rem;
   bottom: 1rem;
-
-  @include bp-smallup {
-    right: 1.5rem;
-    bottom: 1.5rem;
-  }
+  left: 1rem;
 
   display: flex;
   overflow: hidden;
@@ -21,6 +16,12 @@
   border-radius: .375rem;
   background-color: $color-deep-gray;
 
+  @include bp-smallup {
+    right: 1.5rem;
+    bottom: 1.5rem;
+    left: unset;
+  }
+
   &.-show {
     transition: all .5s 0s $swift-out;
     transform: translateY(0);
@@ -29,8 +30,6 @@
   }
 
   &.-color {
-
-
     .background {
       transform: scaleY(1);
     }
@@ -55,7 +54,8 @@
   }
 
   &.-fail {
-    & > .progress, .background {
+    & > .progress,
+    .background {
       background-color: $color-red;
     }
   }
@@ -114,30 +114,30 @@
 
   & > .progress {
     position: absolute;
+    z-index: -2;
     bottom: 0;
     left: 0;
 
     width: 100%;
     height: 4px;
-    z-index: -2;
 
     transform: scaleX(0);
     transform-origin: 0;
 
     background-color: lighten($color-deep-gray, 35%);
-
-
   }
 
   & > .background {
     position: absolute;
+    z-index: -1;
     bottom: 0;
     left: 0;
+
     width: 100%;
     height: 100%;
+
+    transition: transform .4s $swift-out;
     transform: scaleY(0);
     transform-origin: 0 100%;
-    z-index: -1;
-    transition: transform 0.4s $swift-out;
   }
 }
