--- a/src/static/scss/ambience/_animation.scss
+++ b/src/static/scss/ambience/_animation.scss
@@ -34,3 +34,33 @@ $swift-out: cubic-bezier(.55, 0, .1, 1);
     opacity: 0;
   }
 }
+
+@keyframes extend-highlight {
+  0% {
+    background-size: 0 100%;
+  }
+  100% {
+    background-size: 100% 100%;
+  }
+}
+
+
+
+@keyframes extend-highlight-line-horizontal {
+  0% {
+    transform: scaleX(0);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
+
+
+@keyframes extend-highlight-line-vertical {
+  0% {
+    transform: scaleY(0);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
