Feature/alert message (#67)
* Add initial alertMessage

* remove unused scss from app.scss

* Add progress js behavior

* Hide alertMessage after animation

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add pause/resume progress

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Remove undo elements by default

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Show success alertMessage when seuggestion is sent

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* improve animation

* Improve animation

* Create random emojis

* Fix js input

* Change success text

* gst

* Change text

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -46,6 +46,7 @@
 @import 'components/overlay-modal';
 @import 'components/info-bar';
 @import 'components/info-button';
+@import 'components/alert-message';
 @import 'components/start-header';
 
 // Vendor
