Adjust residual solid button

--- a/src/templates/components/hero.html
+++ b/src/templates/components/hero.html
@@ -3,5 +3,5 @@
   <img src="{% static 'img/wikilegis-horizontal.svg' %}" alt="Wikilegis">
   <h1>Dê sua <span class="text-highlight">opinião</span></h1>
   <p>Analise os projetos de lei e contribua com sugestões de nova redação a artigos ou parágrafos.</p>
-  <a href="#js-projects-list" class="solid-button -green">Quero participar</a>
+  <a href="#" class="app-button -green">Quero participar</a>
 </div>
