--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -59,8 +59,8 @@
           <h3>Você foi convidado para participar nesta proposição</h3>
         </span>
         <div class="actions">
-          <a href="{% url 'invitation' invite.pk 'accepted' %}" class="solid-button -green">Aceitar</a>
-          <a href="{% url 'invitation' invite.pk 'declined' %}" class="solid-button -red">Recusar</a>
+          <a href="{% url 'invitation' invite.pk 'accepted' %}" class="app-button -green">Aceitar</a>
+          <a href="{% url 'invitation' invite.pk 'declined' %}" class="app-button -red">Recusar</a>
         </div>
       </div>
     </div>
