--- a/src/static/scss/components/_submitted-opinion.scss
+++ b/src/static/scss/components/_submitted-opinion.scss
@@ -4,14 +4,17 @@
   align-self: center;
 
   & > .submission {
-    display: none;
-    color: white;
-    text-transform: uppercase;
-    font-weight: 600;
     font-size: $font-size-base;
-    text-shadow: 2px 2px rgba(0, 0, 0, 0.2);
+    font-weight: 600;
+
+    display: none;
+
+    animation: submitted-opinion .75s .25s ease-in-out forwards;
+    text-transform: uppercase;
+
     opacity: 0;
-    animation: submitted-opinion 0.75s 0.1s ease-in-out forwards;
+    color: white;
+    text-shadow: 2px 2px rgba(0, 0, 0, .2);
 
     @include bp-mediumup {
       font-size: $font-size-deca;
