--- a/src/static/scss/components/_suggestion-opinion.scss
+++ b/src/static/scss/components/_suggestion-opinion.scss
@@ -1,12 +1,39 @@
 .suggestion-opinion {
+  display: flex;
   display: inline-flex;
+  align-items: center;
 
-  padding: .5rem 0;
+  padding: .5rem 1rem;
 
   cursor: pointer;
-  text-decoration: underline;
 
-  &:hover {
-    opacity: .8;
+  &:hover > .text {
+    transform: translateX(0);
+
+    opacity: 1;
+  }
+
+  & > .text {
+    font-size: .625rem;
+    font-weight: bold;
+
+    transition: all .15s $swift-out;
+    transform: translateX(-5%);
+    letter-spacing: 1px;
+    text-transform: uppercase;
+
+    opacity: 0;
+  }
+
+  & > .icon {
+    box-sizing: border-box;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-top: .2rem;
+    margin-right: .5rem;
+
+    background-image: url('../img/comment.svg');
+    background-repeat: no-repeat;
+    background-size: 100%;
   }
 }
