--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -72,9 +72,9 @@
       <h3>{{ excerpt.content|safe }}</h3>
       {% else %}
       <p><b>{% excerpt_numbering excerpt %}</b>{% include "components/document-excerpt.html" with excerpt=excerpt group=object %}
-        <span class="suggestion-opinion js-opinionButton">
+        <span class="suggestion-opinion js-opinionButton {% if not excerpt.suggestions.all %}_hide{% endif %}">
           <i class="icon"></i>
-          <span class="text">Ver sugestões</span>
+          <span class="text">Ver opiniões</span>
         </span>
       </p>
       {% endif %}
