--- a/src/static/scss/components/_projects-list.scss
+++ b/src/static/scss/components/_projects-list.scss
@@ -56,7 +56,7 @@
   }
 
   & > .list {
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 
     @include bp-smallup {
       display: grid;
@@ -65,6 +65,14 @@
       grid-row-gap: 1.5rem;
       grid-template-columns: repeat(auto-fill, minmax(347px, 1fr));
       grid-auto-rows: minmax(347px, 1fr);
+    }
+
+    & > .simple-card {
+      margin-top: 1.5rem;
+
+      @include bp-smallup {
+        margin-top: 0;
+      }
     }
   }
 }
