--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -95,14 +95,16 @@
       <h3>{% excerpt_numbering excerpt %}</h3>
       <h3>{{ excerpt.content|safe }}</h3>
       {% else %}
-      <p><b>{% excerpt_numbering excerpt %}</b>{% include "components/document-excerpt.html" with excerpt=excerpt group=object %}
+      <p class="js-excerptWrapper">
+        <b>{% excerpt_numbering excerpt %}</b>
+        {% include "components/document-excerpt.html" with excerpt=excerpt group=object %}
         {% if request.user.is_authenticated %}
           {% excerpt_suggestions excerpt request.user as has_suggestions %}
         {% else %}
           {% excerpt_suggestions excerpt as has_suggestions %}
         {% endif %}
         {% if has_suggestions %}
-        <span class="suggestion-opinion js-opinionButton" data-excerpt-id='{{ excerpt.id }}'>
+        <span class="suggestion-opinion js-opinionButton">
           <i class="icon"></i>
           <span class="text">Ver opiniões</span>
         </span>
