hide/show opinion balloons

--- a/src/templates/components/opinion-modal.html
+++ b/src/templates/components/opinion-modal.html
@@ -19,7 +19,7 @@
           <h2>Você concorda?</h2>
           <div class="close-icon js-closeModal"><img class="icon" src="{% static 'img/close.svg' %}"></div>
         </header>
-        
+
         <div class="usercontent">
           <div class="highlight">
             <div class="overflow">
@@ -27,19 +27,19 @@
                 <img class="js-userAvatar" src="{{suggestion.author.profile.avatar_url}}">
                 <h3>{{suggestion.author.get_full_name}} destacou o trecho:</h3>
               </span>
-              
+
               <p class="excerpt js-documentExcerpt">
                 {% highlight_suggestion suggestion %}
               </p>
             </div>
           </div>
-          
+
           <div class="opinion">
             <div class="overflow">
               <span class="info-text">
                 <h3>E deu a seguinte opinião nele:</h3>
               </span>
-              
+
               <p class="suggestion js-suggestion">{{suggestion.content}}</p>
             </div>
           </div>
@@ -47,9 +47,11 @@
       </div>
 
       <footer class="actions">
+        {% if request.user.is_authenticated %}
         <a href="#" class="disagree js-opinionButton" data-opinion="reject" data-text="Discordo">Discordo</a>
         <a href="#" class="indifferent js-opinionButton" data-opinion="neutral" data-text="Indiferente">Indiferente</a>
         <a href="#" class="agree js-opinionButton" data-opinion="approve" data-text="Concordo">Concordo</a>
+        {% endif %}
         <a href="#" class="skip js-nextOpinion" data-opinion="skip" data-text="Pular Opinião">Pular Opinião</a>
       </footer>
     </article>
