Add extra infos

--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -61,6 +61,12 @@
           {% endfor %}
         </ul>
       </div>
+      <div class="item">
+        <div class="socials">
+          <a href="#" class="twitter"></a>
+          <a href="#" class="facebook"></a>
+        </div>
+      </div>
       {% endif %}
       {% if object.document.videos.all %}
         {% for video in object.document.videos.all %}
