--- a/src/static/scss/components/_info-bar.scss
+++ b/src/static/scss/components/_info-bar.scss
@@ -63,6 +63,15 @@
     }
   }
 
+  & > .item > .socials {
+    display: flex;
+    align-items: center;
+
+    & > * + * {
+      margin-left: .5rem;
+    }
+  }
+
   & > .item > .title {
     font-size: 1.5rem;
     font-weight: bold;
