Feature/opinion modal adjustments (#66)
* Define Opinion Onboarding feature

* Add delayed animation to button

* Update opinion onboarding

* Add opinion onboarding

* Fix eslinter stuff

* Adjust opinion modal styles and remove button animation

* Quickfix for file structure

* Fix test errors

* Refactor all buttons

.solid-button is now a more generic .app-button.
The .simple-link is now the .-clear variant of the solid-button

* Add mixin for including icons

* Refactor opinion-card [WIP]

* Refactor medium-up action buttons to -circle variant

* Make sure the highlight bg touches on multiline

* Add blur to the overlay

* Add a white button

* Left align any info-text

* Change skip icon color

* Fully refactor the opinion modal

- Changed its layout
- Added fixed circled buttons outside of the card
- Added a connecting line between the user opinion and its highlighted text

* Change skip label string

* Add other shadows

* Adjust circle buttons

* Comb SCSS

* Adjust opinion card for mobile and add proper animations

* Adjust shadows under dark bg

* Add animations to cards and circle button ripples

* Adjust send opinion suggestion

* Add visual cue for submitted opinion [WIP]

* Properly close opinion modal after going through all opinions

* Show submission cue right after giving an opinion

* Add animation to the overlay

* Fix the opinion modal header

* Revert "Fix the opinion modal header"

This reverts commit 0f39e2d5ca9be86a1768ea81dac5f3e58e457501.

* Make sure the header is fixed to the top when overflow is visible

* Fix modal height

* Adjust text highlight

* Add animation to card text highlight

* Adjust residual solid button

* Adjust all animations and disable buttons after click

* Fix eslint error

* Nope. Now we're fixing the stupid eslint errors

* Adjust button disabling to our architecture

--- a/src/static/scss/components/_text-highlight.scss
+++ b/src/static/scss/components/_text-highlight.scss
@@ -1,9 +1,14 @@
 .text-highlight {
-  background-color: rgba(255, 221, 102, 0.5);
+  position: relative;
+
+  padding: .2em 0;
+
   color: $color-deep-gray;
+  background-color: rgba($color-highlight, .5);
 
   &.-active {
-    background-color: rgba(255, 221, 102, 1);
     cursor: default;
+
+    background-color: $color-highlight;
   }
 }
