--- a/src/static/scss/ambience/_animation.scss
+++ b/src/static/scss/ambience/_animation.scss
@@ -1,1 +1,123 @@
 $swift-out: cubic-bezier(.55, 0, .1, 1);
+
+@keyframes activate-card {
+  from {
+    transform: scale(.9);
+
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+
+    opacity: 1;
+  }
+}
+
+@keyframes submitted-opinion {
+  0% {
+    transform: translateY(2rem);
+
+    opacity: 0;
+  }
+
+  35% {
+    opacity: 1;
+  }
+
+  75% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(-2rem);
+
+    opacity: 0;
+  }
+}
+
+@keyframes extend-highlight {
+  0% {
+    background-size: 0 100%;
+  }
+  100% {
+    background-size: 100% 100%;
+  }
+}
+
+
+
+@keyframes extend-highlight-line-horizontal {
+  0% {
+    transform: scaleX(0);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
+
+
+@keyframes extend-highlight-line-vertical {
+  0% {
+    transform: scaleY(0);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+
+@keyframes extend-opinion-background-horizontal {
+  0% {
+    background-size: 0 100%;
+  }
+  100% {
+    background-size: 100% 100%;
+  }
+}
+
+@keyframes extend-opinion-background-vertical {
+  0% {
+    background-size: 100% 0;
+  }
+  100% {
+    background-size: 100% 100%;
+  }
+}
+
+@keyframes show-opinion-button {
+  0% {
+    transform: translateY(3rem);
+    pointer-events: none;
+
+    opacity: 0;
+  }
+
+  50% {
+    transform: translateY(-.5rem);
+  }
+
+  75% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(0);
+    pointer-events: auto;
+
+    opacity: 1;
+  }
+}
+
+@keyframes hide-opinion-button {
+  0% {
+    transform: translateY(0);
+
+    opacity: 1;
+  }
+
+
+  100% {
+    transform: translateY(3rem);
+
+    opacity: 0;
+  }
+}
