--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -5,6 +5,7 @@
 @import 'ambience/typography';
 
 // Base
+@import 'base/icons';
 @import 'base/responsive';
 @import 'base/reusables';
 @import 'base/unclassed';
@@ -23,11 +24,10 @@
 @import 'components/projects-list';
 @import 'components/simple-card';
 @import 'components/voting-action';
-@import 'components/solid-button';
+@import 'components/app-button';
 @import 'components/text-highlight';
 @import 'components/app-modal';
 @import 'components/opinion-card';
-@import 'components/simple-link';
 @import 'components/text-off';
 @import 'components/info-text';
 @import 'components/suggestion-opinion';
@@ -36,6 +36,7 @@
 @import 'components/input-select';
 @import 'components/autocomplete-list';
 @import 'components/theme-autocomplete';
+@import 'components/submitted-opinion';
 @import 'components/document-form';
 @import 'components/theme-tag';
 @import 'components/section-group';
