--- a/src/static/scss/components/_opinion-card.scss
+++ b/src/static/scss/components/_opinion-card.scss
@@ -1,27 +1,18 @@
 .opinion-card {
-  @extend .app-modal;
-  position: initial;
-  z-index: initial;
-  top: initial;
-  left: initial;
+  position: relative;
 
-  overflow: initial;
-  flex-direction: initial;
+  display: flex;
+  flex-direction: column;
 
-  width: initial;
+  max-width: 22rem;
 
-  background-color: #FFF;
-
-  align-items: flex-start;
-
-  text-align: left;
-
-  transition: transform 0.3s ease, opacity 0.1s ease;
-  opacity: 1;
+  @include bp-mediumup {
+    width: 55rem;
+    max-width: 55rem;
+    padding-bottom: 1.5rem;
+  }
 
   &.-active {
-    display: block;
-
     & ~ .-active {
       display: none;
     }
@@ -31,49 +22,283 @@
     display: none;
   }
 
-  &.-reject {
-    transform: translate(100%, 10%);
-    opacity: 0;
+  & > .card {
+    display: flex;
+
+    margin-top: auto;
+
+    transition: transform 1s $swift-out, opacity .3s .2s ease;
+    transform: translate(0);
+    animation: activate-card .5s $swift-out;
+
+    opacity: 1;
+
+    @include card-darkbg-shadow();
+
+    @at-root .-reject#{&} {
+      transform: rotate(-10deg);
+      transform-origin: 100% 200%;
+
+      opacity: 0;
+
+      @include bp-mediumup {
+        transform-origin: 120% 350%;
+      }
+    }
+
+    @at-root .-approve#{&} {
+      transform: rotate(10deg);
+      transform-origin: 0 200%;
+
+      opacity: 0;
+
+      @include bp-mediumup {
+        transform-origin: -20% 350%;
+      }
+    }
+
+    @at-root .-neutral#{&} {
+      transform: translateY(30%);
+
+      opacity: 0;
+    }
+
+    @at-root .-next#{&} {
+      transform: translateX(calc(-50vw - 17rem));
+
+      @include bp-mediumup {
+        transform: translateX(calc(-50vw - 33.5rem));
+      }
+    }
+
+    & > .suggestion {
+      word-break: break-word;
+    }
+
+    & > header {
+      position: fixed;
+      z-index: 2;
+      top: 0;
+      left: 0;
+
+      display: flex;
+      justify-content: space-between;
+
+      box-sizing: border-box;
+      width: 100%;
+      padding: 1rem;
+
+      background-color: #FFF;
+
+      @include bp-mediumup {
+        padding: 2rem;
+
+        background-color: transparent;
+      }
+    }
+
+    & > .usercontent {
+      overflow-x: hidden;
+      overflow-y: auto;
+
+      @include bp-mediumup {
+        display: flex;
+        overflow-x: unset;
+        overflow-y: unset;
+      }
+
+      & > .highlight,
+      & > .opinion {
+        display: flex;
+        overflow: hidden;
+        flex: 1 0 50%;
+
+        box-sizing: border-box;
+
+        text-align: left;
+
+        & > .overflow {
+          width: 100%;
+          padding: 1rem;
+
+          @include bp-mediumup {
+            overflow-x: hidden;
+            overflow-y: auto;
+            overflow-y: overlay; // This is to render a better scroll bar on Chrome only. If not Chrome, the preceding property is used
+
+            padding: 0 2rem;
+            padding-bottom: 4rem;
+          }
+        }
+      }
+
+      & > .highlight {
+        padding-top: 4.5rem;
+
+        background-color: #FFF;
+
+        @include bp-mediumup {
+          padding-top: 6rem;
+        }
+
+        & > .overflow > .excerpt {
+          position: relative;
+          z-index: 1;
+
+          color: $color-gray;
+
+          & > .text-highlight {
+            position: unset;
+
+            animation: extend-highlight .4s .2s ease-in forwards;
+
+            background-color: transparent;
+            background-image: linear-gradient(transparent 0%, $color-highlight-on-white 0, $color-highlight-on-white 100%, transparent 0);
+            background-repeat: no-repeat;
+            background-position-x: left;
+            background-size: 0 100%;
+
+            @include bp-mediumup {
+              position: relative;
+            }
+
+            &::before,
+            &::after {
+              position: absolute;
+              z-index: -1;
+
+              content: '';
+              transform: scale(0);
+
+              background-color: $color-highlight-on-white;
+            }
+
+            &::after {
+              width: 3px;
+              height: calc(100% + 1rem);
+              margin-left: -3px;
+
+              transform-origin: 0 100%;
+              animation: extend-highlight-line-vertical .4s .4s forwards ease-in;
+
+              @include bp-mediumup {
+                display: none;
+              }
+            }
+
+            &::before {
+              @include bp-mediumup {
+                width: 27.5rem;
+                height: 5px;
+
+                transform-origin: 100% 0;
+                animation: extend-highlight-line-horizontal .4s .2s forwards ease-in;
+              }
+            }
+          }
+        }
+      }
+
+      & > .opinion {
+        padding-bottom: .5rem;
+
+        background-color: $color-highlight-on-white;
+
+        @include bp-mediumup {
+          padding-top: 6rem;
+          padding-bottom: 0;
+        }
+
+        &::before {
+          content: '';
+        }
+      }
+    }
   }
 
-  &.-approve {
-    transform: translate(-100%, 10%);
-    opacity: 0;
-  }
-
-  &.-neutral {
-    transform: translateY(100%);
-    opacity: 0;
-  }
-
-  &.-next {
-    transform: translateY(-100%);
-    opacity: 0;
-  }
-
-  & > .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-  }
-
-  & > .suggestion {
-    word-break: break-word; 
-  }
-
-  @include bp-mediumup {
-    top: initial;
-    left: initial;
-
-    width: initial;
-
-    height: initial;
-    max-height: initial;
-
-    transform: initial;
-  }
-
-  & > .info-text {
+  & > .actions {
+    display: flex;
+    align-items: center;
+    flex: 0 0 auto;
     justify-content: flex-start;
+
+    width: 100%;
+    margin-top: 1rem;
+    margin-bottom: auto;
+
+    @include bp-mediumup {
+      justify-content: center;
+
+      margin-top: 2rem;
+    }
+
+    & > a {
+      animation: show-opinion-button .3s $swift-out forwards;
+      pointer-events: none; // This is set back to auto inside the show-opinion-button
+
+      opacity: 0;
+
+      &.-inactive {
+        animation: hide-opinion-button .3s $swift-out forwards;
+        pointer-events: none;
+      }
+
+      &.-ripple {
+        animation: hide-opinion-button .3s .7s $swift-out backwards;
+        pointer-events: none;
+      }
+    }
+
+    & > .disagree {
+      @extend .app-button;
+      @extend .app-button.-red;
+      @extend .app-button.-circle;
+      @extend .app-button.-circle.-toleft;
+
+      animation-delay: .7s;
+
+      @include icon('disagree');
+    }
+
+    & > .indifferent {
+      @extend .app-button;
+      @extend .app-button.-gray;
+      @extend .app-button.-circle;
+
+      margin: 0 1rem;
+
+      animation-delay: .8s;
+
+      @include bp-mediumup {
+        margin: 0 3rem;
+      }
+      @include icon('indifferent');
+    }
+
+    & > .agree {
+      @extend .app-button;
+      @extend .app-button.-green;
+      @extend .app-button.-circle;
+      @extend .app-button.-circle.-toright;
+
+      animation-delay: .9s;
+
+      @include icon('agree');
+    }
+
+    & > .skip {
+      @extend .app-button;
+      @extend .app-button.-white;
+      @extend .app-button.-circle;
+      @extend .app-button.-circle.-toleft;
+      @extend .app-button.-circle.-small;
+
+      position: absolute;
+      right: 0;
+
+      animation-delay: 1s;
+
+      @include icon('skip');
+    }
   }
 }
