Add social icons

--- a/src/static/scss/components/_info-bar.scss
+++ b/src/static/scss/components/_info-bar.scss
@@ -72,6 +72,12 @@
     }
   }
 
+  & > .item > .social {
+    & > a {
+      
+    }
+  }
+
   & > .item > .title {
     font-size: 1.5rem;
     font-weight: bold;
