--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -69,6 +69,12 @@
         </div>
         {% endfor %}
       {% endif %}
+      <div class="item">
+        <div class="socials">
+          <a href="#" class="icon -twitter"></a>
+          <a href="#" class="icon -facebook"></a>
+        </div>
+      </div>
     </aside>
   </div>
   <article>
