add filter by group in template tag excerpt suggestions

--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -106,9 +106,9 @@
         <b>{% excerpt_numbering excerpt %}</b>
         {% include "components/document-excerpt.html" with excerpt=excerpt group=object %}
         {% if request.user.is_authenticated %}
-          {% excerpt_suggestions excerpt request.user as has_suggestions %}
+          {% excerpt_suggestions object excerpt request.user as has_suggestions %}
         {% else %}
-          {% excerpt_suggestions excerpt as has_suggestions %}
+          {% excerpt_suggestions object excerpt as has_suggestions %}
         {% endif %}
         {% if has_suggestions %}
         <span class="suggestion-opinion js-opinionButton">
