Fix the bugfixes that caused bugs
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/components/_suggestion-opinion.scss
+++ b/src/static/scss/components/_suggestion-opinion.scss
@@ -12,6 +12,7 @@
 
     &:hover > .text {
       transform: translateX(0);
+      color: $color-deep-gray;
 
       opacity: 1;
     }
@@ -55,5 +56,11 @@
       margin-top: .2rem;
       margin-right: .5rem;
     }
+  }
+}
+
+.document-body.-supressed {
+  .suggestion-opinion {
+    opacity: .5;
   }
 }
