Reverse content order in opinion modal

--- a/src/templates/components/opinion-modal.html
+++ b/src/templates/components/opinion-modal.html
@@ -19,28 +19,28 @@
           <h2>Você concorda?</h2>
           <div class="close-icon js-closeModal"><img class="icon" src="{% static 'img/close.svg' %}"></div>
         </header>
-
-        <div class="usercontent">
-          <div class="highlight">
+        
+        <div class="usercontent">          
+          <div class="opinion">
             <div class="overflow">
               <span class="info-text js-userInfo">
                 <img class="js-userAvatar" src="{{suggestion.author.profile.avatar_url}}">
-                <h3>{{suggestion.author.get_full_name}} destacou o trecho:</h3>
+                <h3>{{suggestion.author.get_full_name}} opinou:</h3>
               </span>
-
-              <p class="excerpt js-documentExcerpt">
-                {% highlight_suggestion suggestion %}
-              </p>
+                            
+              <p class="suggestion js-suggestion">{{suggestion.content}}</p>
             </div>
           </div>
 
-          <div class="opinion">
+          <div class="highlight">
             <div class="overflow">
               <span class="info-text">
-                <h3>E deu a seguinte opinião nele:</h3>
+                <h3>No seguinte trecho:</h3>
               </span>
-
-              <p class="suggestion js-suggestion">{{suggestion.content}}</p>
+              
+              <p class="excerpt js-documentExcerpt">
+                {% highlight_suggestion suggestion %}
+              </p>
             </div>
           </div>
         </div>
