--- a/src/static/scss/components/_opinion-card.scss
+++ b/src/static/scss/components/_opinion-card.scss
@@ -77,7 +77,7 @@
 
     & > header {
       position: fixed;
-      z-index: 2;
+      z-index: 3;
       top: 0;
       left: 0;
 
@@ -88,7 +88,7 @@
       width: 100%;
       padding: 1rem;
 
-      background-color: #FFF;
+      background-color: $color-highlight-on-white;
 
       @include bp-mediumup {
         padding: 2rem;
@@ -129,15 +129,25 @@
             padding: 0 2rem;
             padding-bottom: 4rem;
           }
+
+          & > p {
+            margin-top: 1rem;
+          }
+
+          & > .info-text {
+            position: relative;
+            z-index: 2;
+          }
         }
       }
 
       & > .highlight {
-        padding-top: 4.5rem;
+        padding: .5rem 0;
 
         background-color: #FFF;
 
         @include bp-mediumup {
+          padding: 0;
           padding-top: 6rem;
         }
 
@@ -175,10 +185,10 @@
 
             &::after {
               width: 3px;
-              height: calc(100% + 1rem);
+              height: calc(100% + 2.5rem);
               margin-left: -3px;
 
-              transform-origin: 0 100%;
+              transform-origin: 0 0;
               animation: extend-highlight-line-vertical .4s .4s forwards ease-in;
 
               @include bp-mediumup {
@@ -191,7 +201,7 @@
                 width: 27.5rem;
                 height: 5px;
 
-                transform-origin: 100% 0;
+                transform-origin: 0 0;
                 animation: extend-highlight-line-horizontal .4s .2s forwards ease-in;
               }
             }
@@ -200,6 +210,7 @@
       }
 
       & > .opinion {
+        padding-top: 4rem;
         padding-bottom: .5rem;
 
         background-color: $color-highlight-on-white;
