--- a/src/static/scss/components/_document-body.scss
+++ b/src/static/scss/components/_document-body.scss
@@ -9,10 +9,12 @@
   @include bp-smallonly {
     padding-right: 1rem;
     padding-left: 1rem;
+    padding-top: 2.5rem;
   }
   @include bp-mediumonly {
     padding-right: 1.6rem;
     padding-left: 1.6rem;
+    padding-top: 3.5rem;
   }
 
   &.-voidselection {
@@ -25,19 +27,44 @@
 
   & > article {
     max-width: 66ch;
-    margin-right: auto;
-    margin-left: 3rem;
+    padding-right: 2rem;
 
-    @include bp-smallonly {
+    @include bp-mediumup {
       margin-right: auto;
-      margin-left: auto;
+      margin-left: 3rem;
+      padding-right: 9rem;
     }
-    @include bp-mediumonly {
-      margin-left: 0;
+  }
+
+  & > article > p {
+    position: relative;
+  }
+
+  & > article > header > .suggestion-opinion,
+  & > article > p > .suggestion-opinion {
+    position: absolute;
+    top: 0;
+  }
+
+  & > article > header > .suggestion-opinion {
+    right: -7.2rem;
+
+    @include bp-mediumup {
+      right: -9.5rem;
+    }
+  }
+
+  & > article > p > .suggestion-opinion {
+    right: -7rem;
+
+    @include bp-mediumup {
+      right: -9rem;
     }
   }
 
   & > article > header {
+    position: relative;
+
     display: flex;
     flex-direction: column;
   }
