--- a/src/static/scss/components/_suggestion-opinion.scss
+++ b/src/static/scss/components/_suggestion-opinion.scss
@@ -1,12 +1,66 @@
 .suggestion-opinion {
+  display: flex;
   display: inline-flex;
+  align-items: center;
 
-  padding: .5rem 0;
+  padding: .5rem;
 
   cursor: pointer;
-  text-decoration: underline;
 
-  &:hover {
-    opacity: .8;
+  @include bp-mediumup {
+    padding: .5rem 1rem;
+
+    &:hover > .text {
+      transform: translateX(0);
+      color: $color-deep-gray;
+
+      opacity: 1;
+    }
+  }
+
+  &.-all {
+    & > .icon {
+      width: 1.75rem;
+      height: 1.75rem;
+
+      background-image: url('../img/comments.svg');
+
+      @include bp-mediumup {
+        margin-top: 0;
+      }
+    }
+  }
+
+  & > .text {
+    font-size: .625rem;
+    font-weight: bold;
+
+    transition: all .15s $swift-out;
+    transform: translateX(-5%);
+    letter-spacing: 1px;
+    text-transform: uppercase;
+
+    opacity: 0;
+  }
+
+  & > .icon {
+    box-sizing: border-box;
+    width: 1.25rem;
+    height: 1.25rem;
+
+    background-image: url('../img/comment.svg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+
+    @include bp-mediumup {
+      margin-top: .2rem;
+      margin-right: .5rem;
+    }
+  }
+}
+
+.document-body.-supressed {
+  .suggestion-opinion {
+    opacity: .5;
   }
 }
