--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -70,9 +70,9 @@
         {% endfor %}
       {% endif %}
       <div class="item">
-        <div class="socials">
-          <a href="#" class="icon -twitter"></a>
-          <a href="#" class="icon -facebook"></a>
+        <div class="social">
+          <a class="facebook" href="#"></a>
+          <a class="twitter" href="#"></a>
         </div>
       </div>
     </aside>
